Fix for double border

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -217,6 +217,7 @@
 
       .row-selection-actions-card {
         border-right-width: 0px;
+        border-left-width: 0px;
         position: sticky;
         top: 0;
         left: 0;
